--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Webpage Title (will show on tab) -->
     <title>Professional Portfolio</title>
     <style>
-        /* Basic styling for the page */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -40,7 +38,6 @@
     </style>
 </head>
 <body>
-    <!-- Header Section -->
     <header>
         <h1>Welcome to My Portfolio</h1>
         <nav>
@@ -51,13 +48,10 @@
         </nav>
     </header>
 
-    <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
         <p>
-            <!-- Add a brief introduction about yourself here -->
-            Hello! My name is [Your Name]. I am passionate about [your interests or profession]. 
-            Welcome to my portfolio website!
+            Hello! My name is Dmytro Karpenko. I am passionate about Coding and IT development. Welcome to my portfolio website!
         </p>
     </section>
 
