--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             Here are some of the projects I have worked on:
         </p>
         <ul>
-            <li>Project 1: [Brief description] <a href="[link to project repository]" target="_blank">[Project repository]</a></li>
-            <li>Project 2: [Brief description] <a href="[link to project repository]" target="_blank">[Project repository]</a></li>
+            <li>Project 1: A terminal Sudoku game, written in java language. Every other game is new and never the same, the sudoku board is being generated randomly and provides different levels of difficulty. <a href="https://github.com/D1teri/Sudoku" target="_blank">Sudoku</a></li>
+            <li>Project 2: A terminal game about a hero who is trapped in a dungeon and to escape it he has to find a key. He faces many challenges like traps, enemies and a huge labyrinth. As soon as our hero finds a key, he has to find a door, that does not exist representing the deep meaning of game that there is no escape from the reality. <a href="https://github.com/D1teri/DungeonGame" target="_blank">Dungeon</a></li>
         </ul>
     </section>
 
@@ -76,9 +76,9 @@
             I have earned the following certifications and achievements:
         </p>
         <ul>
-            <li>Certification 1: [Details]</li>
-            <li>Certification 2: [Details]</li>
-            <li>Certification 3: [Details]</li>
+            <li>Certification 1: GMetrix Certification</li>
+            <li>Certification 2: AP Computer Science Princicles (AP CSP) course of Patrick Henry High School</li>
+            <li>Certification 3: AP Computer Science A (CSA) course of Patrick Henry High School</li>
             <!-- Add images of your certification digital badges -->
         </ul>
     </section>
@@ -91,14 +91,13 @@
             Feel free to reach out to me:
         </p>
         <ul>
-            <li>Email: [your-email@example.com]</li>
-            <li>LinkedIn: <a href="[your-linkedin-profile]" target="_blank">[Your LinkedIn]</a></li>
+            <li>Email: dkarpenko20071209@gmail.com</li>
         </ul>
     </section>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 Dmytro Karpenko. All rights reserved.</p>
     </footer>
 </body>
 </html>
